Minor UI fixes, add draggable to stat editors, Fix typings
