# backend/swagger.json
@@ -145,7 +145,9 @@
 						"type": "string",
 						"enum": [
 							"5th_e_SRD",
-							"Homebrew"
+							"Homebrew",
+							"My_Items",
+							"System"
 						],
 						"nullable": false
 					},
@@ -182,8 +184,7 @@
 						"nullable": true
 					},
 					"weight": {
-						"type": "number",
-						"format": "double",
+						"type": "string",
 						"nullable": true
 					},
 					"features": {
@@ -235,7 +236,9 @@
 						"type": "string",
 						"enum": [
 							"5th_e_SRD",
-							"Homebrew"
+							"Homebrew",
+							"My_Items",
+							"System"
 						],
 						"nullable": false
 					},
