# packages/domain/lib/entities/Entity.js
@@ -5,5 +5,7 @@ var Source;
 (function (Source) {
     Source["FifthESRD"] = "5th_e_SRD";
     Source["HomeBrew"] = "Homebrew";
+    Source["MyItem"] = "My_Items";
+    Source["System"] = "System";
 })(Source || (exports.Source = Source = {}));
 //# sourceMappingURL=Entity.js.map
